<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none">

    <TableLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:shrinkColumns="1"
        tools:context="com.android.alaa.financeapp.activities.ExpenseInputFragment">

        <TableRow>

            <TextView
                android:id="@+id/amount_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/text_amount" />

            <EditText
                android:id="@+id/amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/category_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/expense_text_category" />

            <Spinner
                android:id="@+id/category_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/date_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:text="@string/expense_text_date" />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/description_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:text="@string/description_title" />

            <EditText
                android:id="@+id/description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/payee_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/payee_txt" />

            <EditText
                android:id="@+id/payee_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/payment_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/payment_method" />

            <EditText
                android:id="@+id/payment_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:text="" />
        </TableRow>

        <TableRow android:paddingTop="20dp">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/expense_btn_submit" />
        </TableRow>

        <TableRow android:paddingTop="20dp">

            <Button
                android:id="@+id/parse_qif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/parse_qif_btn" />
        </TableRow>

    </TableLayout>
</ScrollView>